Fix Overflow Error on Non-Highlighted Code

--- a/docs/css/the.css
+++ b/docs/css/the.css
@@ -193,6 +193,11 @@ pre {
   font-family: var(--font-monospace);
 }
 
+pre:not(.sourceCode) {
+  max-width: 100%;
+  overflow: auto;
+}
+
 
 /* CSS variables don't work in media queries... --content-width: 600px; */
 @media only screen and (min-width: 600px) {
